@@ -1,3 +1,15 @@
+2012-12-07  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlattribute.c: (gst_ttml_parse_color_expression),
+	(gst_ttml_attribute_parse):
+	* src/gstttmlattribute.h:
+	* src/gstttmlenums.h:
+	* src/gstttmlforward.h:
+	* src/gstttmlstate.c: (gst_ttml_state_reset),
+	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute):
+	* src/gstttmlstate.h:
+	  - Parse the "color" attribute (Still unused)
+
 2012-12-05  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlattribute.h:
